Fix bug: Generate key button text is too long on Russian

--- a/app/styles/pages/specific/_specific-second-factor-authentication-page.scss
+++ b/app/styles/pages/specific/_specific-second-factor-authentication-page.scss
@@ -120,6 +120,10 @@
           text-transform: uppercase;
         }
       }
+
+      button {
+        white-space: normal;
+      }
     }
   }
 
